# streamlink

./: .codecov.yml  .coveragerc  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .readthedocs.yml  .stickler.yml  .travis.yml  AUTHORS  AUTHORS.rst  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  DOKUMENTACJA_API.md  ISSUE_TEMPLATE.md  KNOWN_ISSUES.md  LICENSE  LICENSE.flashmedia  LICENSE.pbs  LICENSE.plugins  MANIFEST.in  NOTICE  PRZEWODNIK_MODULU.md  Pipfile  README  README.md  README.rst  __test__yt.py  appveyor.yml  codecov.yml  conftest.py  deploy-key.enc  deploy_key_doctr.enc  dev-requirements.txt  docs-requirements.txt  doctr_deploy_key.enc  (+15 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  dependabot.yml  issue_template.md  pull.yml  pull_request_template.md  release_template.md
.github/DISCUSSION_TEMPLATE/: general.yml  q-a.yml
.github/ISSUE_TEMPLATE/: 0_use_the_issue_template.md  1_plugin_issue.md  1_plugin_issue.yml  1_plugin_request.md  1_plugin_request.yml  2_bug_report.md  2_bug_report.yml  3_feature_request.md  3_feature_request.yml  3_plugin_request.yml  4_feature_request.yml  Bug_Report.md  Feature_Request.md  Plugin_Issue.md  Plugin_Request.md  bug_report.md  config.yml  feature_request.md  plugin_issue.md  plugin_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: codeql-analysis.yml  docs.yml  install-temp-dependencies.sh  lint.yml  main.yml  preview-build.yml  release.yml  streamlink-service.yml  test.yml  useragents.yml
.travis/: build-win32.sh
build_backend/: __init__.py  commands.py  onbuild.py  plugins_json.py  test_build_backend.py  test_onbuild.py  test_plugins_json.py
debian/: changelog  control  copyright  python-livestreamer-doc.doc-base  python-livestreamer-doc.docs  python-streamlink-doc.doc-base  python-streamlink-doc.docs  python-streamlink.install  python3-streamlink.install  rules  streamlink.install  streamlink.links  streamlink.manpages  watch
debian/patches/: remove_github_buttons  remove_new_version_check  series  use_debian_fonts  use_debian_modernizr
docs/: Makefile  _applications.rst  _man.rst  acknowledgements.rst  api.rst  api_guide.rst  applications.rst  changelog.rst  cli.rst  conf.py  deprecations.rst  developing.rst  docutils.conf  donate.rst  ext_argparse.py  ext_github.py  ext_html_template_vars.py  ext_plugins.py  ext_releaseref.py  index.rst  install.rst  issues.rst  migrations.rst  players.rst  plugin_matrix.rst  plugins.rst  support.rst  thirdparty.rst  twitch_oauth.rst
docs/_static/: site.webmanifest
docs/_templates/: base.html  github-buttons.html  layout.html  page.html  versions.html
docs/_themes/: LICENSE  flask_theme_support.py
docs/api/: cache.rst  exceptions.rst  options.rst  plugin.rst  session.rst  stream.rst  streamlink.rst  validate.rst  webbrowser.rst
docs/api_guide/: quickstart.rst  validate.rst
docs/cli/: config.rst  metadata.rst  plugin-sideloading.rst  plugins.rst  protocols.rst  proxy.rst  tutorial.rst
docs/sphinxext/: ext_argparse.py  ext_github.py  ext_plugins.py  ext_releaseref.py
examples/: 01_basic_usage.py  02_download_to_file.py  03_session_configuration.py  04_stream_information.py  05_custom_plugin.py  README.md  gst-player.py  opencv-face.py
release/chocolatey/: streamlink.nuspec
script/: authors.sh  bintrayconfig.sh  bintrayupdate.sh  build-and-sign.sh  build-shell-completions.sh  deploy-docs.sh  deploy-pypi.sh  generate-cdp.py  github-release.py  github_releases.py  install-dependencies.sh  makedocs.sh  makeinstaller-assets.json  makeinstaller-requirements.json  makeinstaller.sh  makeinstallers.sh  pushdocs.sh  release.sh  sdistsign.sh  test-plugin-urls.py  update-removed-plugins.sh  update-user-agents.py
src/: catcast
src/livestreamer/: __init__.py  api.py  buffers.py  cache.py  cli.py  compat.py  exceptions.py  logger.py  options.py  plugin.py  session.py  stream.py  utils.py
src/livestreamer_cli/: argparser.py  compat.py  console.py  constants.py  main.py  output.py  utils.py
src/streamlink/: TaskTimer.py  __init__.py  _version.py  api.py  buffers.py  cache.py  compat.py  exceptions.py  kanal7.py  logger.py  options.py  session.py  user_input.py  utils.py
src/streamlink_cli/: __init__.py  __main__.py  _parser.py  argparser.py  compat.py  console.py  constants.py  exceptions.py  main.py  output.py  show_matchers.py  streamrunner.py
tests/: __init__.py  conftest.py  mock.py  test_api_http_session.py  test_api_validate.py  test_api_websocket.py  test_buffer.py  test_buffers.py  test_cache.py  test_cli_argparser.py  test_cli_main.py  test_cli_main_formatter.py  test_cli_playerout.py  test_cli_shlex.py  test_cli_util_progress.py  test_cli_utils_formatter.py  test_cli_utils_path.py  test_cmdline.py  test_cmdline_player_fifo.py  test_cmdline_title.py  test_compat.py  test_console.py  test_docs_plugins.py  test_hls.py  test_hls_playlist.py  test_lazy_formatter.py  test_localization.py  test_localization_pycountry.py  test_log.py  test_logger.py  test_meta.py  test_options.py  test_output.py  test_plugin.py  test_plugin_abweb.py  test_plugin_adultswim.py  test_plugin_afreeca.py  test_plugin_api_http_session.py  test_plugin_api_utils.py  test_plugin_api_validate.py  (+80 more)
tests/cli/: __init__.py  test_argparser.py  test_cmdline.py  test_cmdline_player_fifo.py  test_cmdline_title.py  test_compat.py  test_console.py  test_main.py  test_main_can_handle_url.py  test_main_check_file_output.py  test_main_formatter.py  test_main_logging.py  test_main_setup_config_args.py  test_main_version_check.py  test_plugin_args_and_options.py  test_stream_url_and_json.py  test_streamrunner.py
tests/mixins/: stream_hls.py
tests/plugin/: testplugin.py  testplugin_invalid.py  testplugin_missing.py  testplugin_override.py
tests/plugins/: __init__.py  conftest.py  (+309 more)
win32/: AdvReplaceInFile.nsh  EnvVarUpdate.nsh  LICENSE.txt  THIRD-PARTY.txt  build-bbfreeze.py  build-with-bootstrap.sh  config  livestreamer-win32-installer-from-bootstrap.nsi  livestreamer-win32-installer.nsi  livestreamerrc  streamlinkrc
(+847 files in other folders)
