[wheel]
universal = 1

[metadata]
license_file = LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = src/streamlink/_version.py
versionfile_build = streamlink/_version.py
tag_prefix =
parentdir_prefix = streamlink-

[flake8]
ignore =
  # W503 - line break before binary operator
  # https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
  W503,
exclude =
  __pycache__/,
  .git/,
  build/,
  dist/,
  docs/,
  examples/,
  env/,
  src/streamlink/packages/flashmedia/,
  script/
  venv/,
  versioneer.py,
  win32/,
per-file-ignores =
  src/streamlink/__init__.py:E402,F401,
  src/streamlink/plugin/api/useragents.py:E501,
  src/streamlink/plugins/__init__.py:F401,
  src/streamlink/stream/__init__.py:F401,
  src/streamlink_cli/utils/named_pipe.py:F401,
  tests/mock.py:F401,F403,
max-line-length = 128
show-source = True
statistics = True
builtins =
  basestring,
  file,
  raw_input,
  unicode,
  xrange,
