[metadata]
name = streamlink
author = Streamlink
author_email = streamlink@protonmail.com
description = Streamlink is a command-line utility that extracts streams from various services and pipes them into a video player of choice.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/streamlink/streamlink
project_urls =
  Documentation = https://streamlink.github.io/
  Tracker = https://github.com/streamlink/streamlink/issues
  Source = https://github.com/streamlink/streamlink
  Funding = https://opencollective.com/streamlink
license = Simplified BSD
license_files = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: BSD License
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Operating System :: POSIX
  Operating System :: MacOS
  Operating System :: Microsoft :: Windows
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Internet :: WWW/HTTP
  Topic :: Multimedia :: Sound/Audio
  Topic :: Multimedia :: Video
  Topic :: Utilities

[options]
python_requires = >=3.7, <4
package_dir =
  =src
packages = find:
install_requires =
  importlib-metadata ; python_version<"3.8"
  isodate
  lxml >=4.6.4,<5.0
  pycountry
  pycryptodome >=3.4.3,<4
  PySocks !=1.5.7,>=1.5.6
  requests >=2.26.0,<3.0
  websocket-client >=1.2.1,<2.0

[options.packages.find]
where = src

[flake8]
ignore =
  # W503 - line break before binary operator
  # https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
  W503,
extend-exclude =
  build/,
  dist/,
  docs/conf.py,
  env/,
  examples/,
  src/streamlink/packages/,
  src/streamlink_cli/packages/,
  venv/,
per-file-ignores =
  src/streamlink/__init__.py:F401,I101,I202,
  src/streamlink/plugin/api/useragents.py:E501,
  src/streamlink/plugins/__init__.py:F401,
  src/streamlink/stream/__init__.py:F401,
max-line-length = 128
count = True
show-source = True
statistics = True
import-order-style = pycharm
application-import-names =
  streamlink,
  streamlink_cli,
  tests,
